hphp/test/slow/eval_order/1500.php.expectf
string(3) "123"

Fatal error: Call to undefined method A::foo() in %s/test/slow/eval_order/1500.php on line 13
string(7) "errored"
